--- a/package.json
+++ b/package.json
@@ -3,16 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@lens-protocol/client": "^0.3.0",
     "@pushprotocol/restapi": "^0.8.1",
     "@pushprotocol/socket": "^0.4.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
     "buffer": "^6.0.3",
     "ethers": "^5.6",
+    "graphql": "^16.6.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "urql": "^3.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
