--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ethers": "^5.6",
     "graphql": "^16.6.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "dotenv": "^16.0.3",
     "tailwindcss": "^3.2.7"
   }
 }
