--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@lens-protocol/client": "^0.3.0",
-    "@pushprotocol/restapi": "^0.8.1",
+    "@pushprotocol/restapi": "0.9.0",
     "@pushprotocol/socket": "^0.4.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
